--- a/club-manager-member/pom.xml
+++ b/club-manager-member/pom.xml
@@ -39,7 +39,6 @@
             <version>2.1.1</version>
         </dependency>
 
-
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-all</artifactId>
@@ -64,4 +63,12 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
